fix: weird linting issue in vscode copilot instructions

--- a/.vscode/.copilot-instructions.md
+++ b/.vscode/.copilot-instructions.md
@@ -38,7 +38,7 @@ Generics: `Name[TypeParam]` for both records and unions
 - `arr[idx]` - indexing arrays, slices, pointers
 - `func(a, b)` - function call
 - `obj.method()` - method calls auto-convert between value/pointer as needed for receiver type
-- `func[i32](x)` - generic call with explicit type arguments
+- `func[i32]()` - generic call with explicit type arguments
 - `Type{field: value}` or `Generic[T]{field: value}` - literal construction
 - `value::TargetType` - cast (sizes must match, bit reinterpret (`i64` to `f64` bad etc.))
 - `?expr` - address-of (operand must be lvalue, returns pointer)
